# verkko

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
deploy/: docker-compose.dev.yml  docker-compose.infra.dev.yml  docker-compose.infra.prod.yml  docker-compose.prod.yml
deploy/certs/: server.crt.example  server.key.example
deploy/vault/: vault-init.sh
src/: app.py  container.py  main.py  routes.py
src/common/: api_route.py  response.py
src/common/abstracts/: __init__.py  base_use_case.py
src/common/dtos/: __init__.py  paginated_response.py  presentation_response.py
src/common/exceptions/: __init__.py  base_exception.py
src/common/filters/: __init__.py  exception_filter.py
src/common/interceptors/: __init__.py  presentation_response_handler.py
src/common/logger/: __init__.py  logger.py
src/common/use_case/: __init__.py
src/modules/inventory_record/: container.py
src/modules/inventory_record/application/: __init__.py
src/modules/inventory_record/application/facades/: inventory_record_facade.py
src/modules/inventory_record/application/ports/: inventory_repository.py
src/modules/inventory_record/application/services/: inventory_record_application_service.py
src/modules/inventory_record/presentation/: __init__.py
src/modules/shared/config/: __init__.py  container.py
src/modules/shared/database/: __init__.py  container.py
src/modules/shared/health/: __init__.py  health_controller.py
tests/: conftest.py  test_health.py
(+25 files in other folders)
